# simple-naver-search-mcp

./: .gitignore  CLAUDE.md  README.md  mcp_config.example.json  pyproject.toml  test_api.py
.claude/commands/: convert-to-genos.md
.claude/skills/convert-to-genos/: SKILL.md
.github/workflows/: ci.yml
scripts/: test_api.py  test_api_proxy.py
src/naver_search/: server.py
src/naver_search/genos/: server-genos.py
